--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -1,5 +1,19 @@
 _svd: "../esp32h2.base.svd"
 
+_modify:
+  GDMA:
+    name: DMA
+
+DMA:
+  "IN_INT_ST_CH%s":
+    _strip_end: "_CH_INT_ST"
+  "IN_INT_ENA_CH%s":
+    _strip_end: "_CH_INT_ENA"
+  "OUT_INT_ST_CH%s":
+    _strip_end: "_CH_INT_ST"
+  "OUT_INT_ENA_CH%s":
+    _strip_end: "_CH_INT_ENA"
+
 LP_WDT:
   _modify:
     CONFIG0:
