--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -50,6 +50,17 @@ LP_WDT:
       LP_WDT_INT_CLR:
         name: WDT_INT_CLR
 
+SPI2:
+  _strip: "SPI_"
+
+  "*":
+    _strip: "SPI_"
+
+  CMD:
+    _modify:
+      UPDATE:
+        access: read-write
+
 UART*:
   CLK_CONF:
     _modify:
