--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -14,3 +14,6 @@ strum      = { version = "0.24.1", features = ["derive"] }
 svd2rust   = { version = "0.28.0", default-features = false }
 svdtools   = "0.3.0"
 toml       = "0.7.3"
+
+[patch.crates-io]
+svd2rust = { git = "https://github.com/rustbox/svd2rust.git", rev = "328d0c37e21379cbcbf4952bad52793ee78be97f" }
