--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       - name: generate pac
         run: cargo run --manifest-path=xtask/Cargo.toml -- --generate-only ${{ matrix.chip }}
       - name: build pac
-        run: cd ${{ matrix.chip }} && cargo check
+        run: cd ${{ matrix.chip }} && cargo check --all-targets
 
   check-xtensa:
     runs-on: ubuntu-latest
@@ -64,7 +64,7 @@ jobs:
       - name: generate pac
         run: cargo run --manifest-path=xtask/Cargo.toml -- --generate-only ${{ matrix.chip }}
       - name: build pac
-        run: cd ${{ matrix.chip }} && cargo check
+        run: cd ${{ matrix.chip }} && cargo check --all-targets
 
   # --------------------------------------------------------------------------
   # MSRV
@@ -92,7 +92,7 @@ jobs:
       - name: generate pac
         run: cargo +nightly run --manifest-path=xtask/Cargo.toml -- --generate-only ${{ matrix.chip }}
       - name: build pac
-        run: cd ${{ matrix.chip }} && cargo +1.65.0 check
+        run: cd ${{ matrix.chip }} && cargo +1.65.0 check --all-targets
 
   msrv-xtensa:
     runs-on: ubuntu-latest
@@ -115,4 +115,4 @@ jobs:
       - name: generate pac
         run: cargo run --manifest-path=xtask/Cargo.toml -- --generate-only ${{ matrix.chip }}
       - name: build pac
-        run: cd ${{ matrix.chip }} && cargo check
+        run: cd ${{ matrix.chip }} && cargo check --all-targets
