--- a/esp32c2/Cargo.toml
+++ b/esp32c2/Cargo.toml
@@ -23,6 +23,10 @@ include = [
     "device.x"
 ]
 
+[lib]
+bench = false
+test = false
+
 [dependencies]
 critical-section = { version = "1.1.1", optional = true }
 vcell = "0.1.3"
